# essentials-of-sycl

./: .gitignore  README.md
module-01/: CMakeLists.txt
module-02/: CMakeLists.txt
module-02/src/: buffer_destruction.cpp  buffer_sample.cpp  gpu_sample.cpp  host_accessor_sample.cpp  vector_addition.cpp
module-03/: CMakeLists.txt
module-03/src/: usm.cpp  usm_data_1.cpp  usm_data_2.cpp  usm_explicit.cpp  usm_lab.cpp
module-04/: CMakeLists.txt
module-04/src/: sub_group_broadcast.cpp  sub_group_info.cpp  sub_group_lab.cpp  sub_group_reduce.cpp  sub_group_shuffle.cpp  sub_group_votes.cpp
module-07/: CMakeLists.txt
module-07/src/: dpl_buffer.cpp  dpl_simple.cpp  dpl_sortdouble.cpp  dpl_usm_allocator.cpp  dpl_usm_pointer.cpp
module-08/: CMakeLists.txt
module-08/src/: multiple_reductions_buffers.cpp  reduction_custom_operator.cpp  reduction_lab.cpp  sum_reduction_buffers.cpp  sum_reduction_usm.cpp  sum_single_task.cpp  sum_workgroup_reduce.cpp
module-09/: CMakeLists.txt
module-09/src/: accessors_sample.cpp  buffer_creation.cpp  buffer_host_ptr.cpp  buffer_set_final_data.cpp  buffer_set_write_back.cpp  host_accessor_init.cpp  host_accessor_sample.cpp  lab_buffers.cpp  sub_buffers.cpp
module-10/: CMakeLists.txt
module-10/src/: accessors_raw.cpp  accessors_war_waw.cpp  linear_buffers_graph.cpp  linear_event_graph.cpp  linear_in_order_graph.cpp  task_scheduling.cpp  usm_explicit.cpp  usm_implicit.cpp  y_pattern_buffers_graph.cpp  y_pattern_event_graph.cpp  y_pattern_in_order_graph.cpp
module-12/: CMakeLists.txt
module-12/src/: atomics_lab.cpp  local_memory_info.cpp  matrix_multiplication_16x16.cpp  matrix_multiplication_16x16_local_memory.cpp  reduction_atomics_buffer.cpp  reduction_atomics_usm.cpp
